--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
       <version>1.21</version>
     </dependency>
 
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>com.jayway.jsonpath</groupId>-->
+<!--      <artifactId>json-path</artifactId>-->
+<!--      <version>2.9.0</version>-->
+<!--    </dependency>-->
+
 
 
 
