Post Patch Get Delete

--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -3,5 +3,6 @@ booking.get.firstname=James
 booking.post.firstname=James
 booking.put.firstname=Shashank
 booking.put.lastname=Surjekar
+booking.patch.firstname=Shashank
 booking.lastname=Brown
 booking.post.statuscode.success=200
